<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="Начало" />

    <item
        android:id="@+id/transactionListFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="Транзакции" />

    <item
        android:id="@+id/statsFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="Статистика" />

</menu>