...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:gravity="center"
        android:text="Все още няма добавени транзакции."
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/addTransactionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transactionsRecyclerView"
...
